[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perdcomp_crawler"
version = "0.0.1"
authors = [
    {name = "Luis Teodoro"},
]
description = "Crawl and Process perdcomp requests for a given number of CNPJ's"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.4",
    "pyarrow>=16.0.0",
    "tqdm>=4.66.4",
]

# [tool.hatch.build.targets.wheel]
# packages = ["aws_wrapper"]